syntax = "proto3";

package services.user.store.svc.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message User {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue account_id = 2;
  google.protobuf.StringValue profile_picture_url = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
  
message CreateUserRequest {
  google.protobuf.StringValue account_id = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserByIDRequest {
  google.protobuf.StringValue id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByAccountIDRequest {
  google.protobuf.StringValue account_id = 1;
}

message GetUserByAccountIDResponse {
  User user = 1;
}

message UpdateProfilePictureRequest {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue url = 2;
}

message UpdateProfilePictureResponse {
  User user = 1;
}

message DeleteProfilePictureRequest {
  google.protobuf.StringValue id = 1;
}

message DeleteProfilePictureResponse {
  User user = 1;
}